# ccs

./: CLAUDE.md  Cargo.toml  LICENSE  README.md  dist-workspace.toml
.github/workflows/: ci.yml  publish.yml
src/: cli.rs  colors.rs  main.rs  tmux.rs
src/commands/: hook.rs  init.rs  kill.rs  list.rs  resume.rs  start.rs
src/sidebar/: app.rs  state.rs  ui.rs
